--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.4
   flutter_secure_storage: ^5.0.2
   flutter_appauth: ^2.4.1
+  socket_io_client: ^1.0.2
 
 dev_dependencies:
   flutter_test:
