Added push for android

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_appauth: ^2.4.1
   socket_io_client: ^1.0.2
   timeago: ^3.2.2
+  firebase_core: ^1.13.1
+  firebase_messaging: ^11.2.11
 
 dev_dependencies:
   flutter_test:
