--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  assets:
+  - assets/
 flutter_icons:
   android: "launcher_icon"
   ios: true
